test/sema/exercise/instantiating_non_struct_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): unit {
  let x = invalid { x: 0 };
  // CHECK: [[# @LINE - 1 ]]:11: error: symbol 'invalid' not found
}
